--- a/app/views/kaminari/_paginator.html.erb
+++ b/app/views/kaminari/_paginator.html.erb
@@ -6,6 +6,7 @@
     remote:        data-remote
     paginator:     the paginator that renders the pagination tags inside
 -%>
+<div class="btn-group" role="group">
 <%= paginator.render do -%>
   <nav class="pagination" role="navigation" aria-label="pager">
     <%= first_page_tag unless current_page.first? %>
@@ -23,3 +24,4 @@
     <% end %>
   </nav>
 <% end -%>
+</div>
