--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
   </header>
 
   <div class="container">
+    <!--ページURLからアラートセクションが必要か判定-->
     <% if include_alert?( request.fullpath ) then %>
     <!--アラートセクション-->
     <div class="row">
