--- a/app/views/makings/edit.html.erb
+++ b/app/views/makings/edit.html.erb
@@ -19,7 +19,7 @@
 
 <!--ページ下部-->
 <div class="makings__edit--bottom">
-  <!--ページ上部のタイトル-->
+  <!--ページ下部のタイトル-->
   <h3>作成中のパターン</h3>
   <!--ライフゲームエミュレート画面-->
   <%= render 'patterns/emulation' %>
