--- a/app/views/patterns/_emulation.html.erb
+++ b/app/views/patterns/_emulation.html.erb
@@ -15,7 +15,7 @@
 
 <!--呼び出し時の画面整形-->
 <%= include_gon %>
-<script>
+<script type="text/javascript">
   $(function(){
     // カテゴリ欄の削除
     $(".application__layouts--leftSection").remove();
