--- a/app/views/patterns/_interface.html.erb
+++ b/app/views/patterns/_interface.html.erb
@@ -8,7 +8,7 @@
 <p>
   <!--リセットアクション-->
   <button type="button" name="refresh" class="btn btn-default patterns__show--lifeGameRefresh" onclick="initializeLifeGame( false, true );">
-    <i class="fas fa-eraser"></i>
+    <i class="fas fa-history"></i>
     リセット
   </button>
 
