--- a/app/views/patterns/edit.html.erb
+++ b/app/views/patterns/edit.html.erb
@@ -39,47 +39,60 @@
   </div>
 
   <!--パターンのイメージ-->
-  <div class="form-group"
-  <i class="fas fa-image"></i>
-  <%= f.label :image_id, " イメージ画像", class: "col-sm-2 control-label fas fa-image" %>
-  <div class="col-sm-10">
-    <%= f.attachment_field :image %>
+  <div class="form-group">
+    <i class="fas fa-image"></i>
+    <%= f.label :image_id, " イメージ画像", class: "col-sm-2 control-label fas fa-image" %>
+    <div class="col-sm-10">
+      <%= f.attachment_field :image %>
+    </div>
   </div>
+
+
+  <!--トーラス面設定-->
+  <div class="form-group">
+    <%= f.label :is_torus, " トーラス面設定", class: "fas fa-globe-asia col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.radio_button :is_torus, true %>
+      <%= f.label :is_torus, '有効' %>
+      <%= f.radio_button :is_torus, false %>
+      <%= f.label :is_torus, '無効' %>
+    </div>
+  </div>
+
+  <!--四方向のマージン-->
+  <div class="form-group">
+    <%= f.label :margin, ' 余白設定', class: "col-sm-2 control-label fas fa-arrows-alt" %>
+    <div class="col-sm-10">
+      <table class="patterns__edit--table">
+        <tr>
+          <th>方向</th>
+          <th>上側</th>
+          <th>下側</th>
+          <th>左側</th>
+          <th>右側</th>
+          <th></th>
+        </tr>
+        <tr>
+          <td>余白</td>
+          <td><%= f.number_field :margin_top,       min: 0, class: "form-control" %></td>
+          <td><%= f.number_field :margin_left,       min: 0, class: "form-control" %></td>
+          <td><%= f.number_field :margin_right,     min: 0, class: "form-control" %></td>
+          <td><%= f.number_field :margin_bottom, min: 0, class: "form-control" %></td>
+          <td>
+            <!--投稿ボタン-->
+            <%= f.submit "編集完了", class: "btn btn-primary patterns__edit--submit"%>
+          </td>
+        </tr>
+      </table>
+      ※余白の変更は画面に反映されません
+    </div>
+  </div>
+  <% end %>
+
+  <!--登校前パターンのプレビュー（エミュレート）画面-->
+  <%= render 'patterns/emulation' %>
 </div>
 
-<!--四方向のマージン-->
-<div class="form-group">
-  <%= f.label :margin, ' 余白設定', class: "col-sm-2 control-label fas fa-arrows-alt" %>
-  <div class="col-sm-10">
-    <table class="patterns__edit--table">
-      <tr>
-        <th>方向</th>
-        <th>上側</th>
-        <th>下側</th>
-        <th>左側</th>
-        <th>右側</th>
-        <th></th>
-      </tr>
-      <tr>
-        <td>余白</td>
-        <td><%= f.number_field :margin_top,       min: 0, class: "form-control" %></td>
-        <td><%= f.number_field :margin_left,       min: 0, class: "form-control" %></td>
-        <td><%= f.number_field :margin_right,     min: 0, class: "form-control" %></td>
-        <td><%= f.number_field :margin_bottom, min: 0, class: "form-control" %></td>
-        <td>
-          <!--投稿ボタン-->
-          <%= f.submit "編集完了", class: "btn btn-primary patterns__edit--submit"%>
-        </td>
-      </tr>
-    </table>
-    ※余白の変更は画面に反映されません
-  </div>
-</div>
-<% end %>
-
-<!--登校前パターンのプレビュー（エミュレート）画面-->
-<%= render 'patterns/emulation' %>
-</div>
 <p class="patterns__edit--alignRight">
   <%= link_to pattern_path( @pattern ), method: :delete, "data-confirm" => "本当に削除してもよろしいですか？", class: "btn btn-danger" do %>
   <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
