--- a/app/views/patterns/new.html.erb
+++ b/app/views/patterns/new.html.erb
@@ -46,6 +46,17 @@
     </div>
   </div>
 
+  <!--トーラス面設定-->
+  <div class="form-group">
+    <%= f.label :is_torus, " トーラス面設定", class: "fas fa-globe-asia col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.radio_button :is_torus, true %>
+      <%= f.label :is_torus, '有効' %>
+      <%= f.radio_button :is_torus, false %>
+      <%= f.label :is_torus, '無効' %>
+    </div>
+  </div>
+
   <!--四方向のマージン（自動入力）-->
   <%= f.hidden_field :margin_top, readonly: true %>
   <%= f.hidden_field :margin_bottom, readonly: true %>
