--- a/app/views/makings/edit.html.erb
+++ b/app/views/makings/edit.html.erb
@@ -2,7 +2,7 @@
 
 <!--ページ上部-->
 <div class="makings__edit--top">
-  <%= form_with( url: making_path, method: :patch ) do | f | %>
+  <%= form_with( model: @making, url: making_path, method: :patch ) do | f | %>
   <!--ページ上部のタイトル-->
   <h3>
     パターン編集エリア
@@ -10,10 +10,27 @@
     <!--「変更を保存」ボタンはdisplay: none;がデフォルト設定-->
     <%= f.submit '変更を保存', id: "makings__edit--update", class: "btn btn-success" %>
   </h3>
+
   <!--作成中パターンのID-->
-  <%= f.hidden_field :id, value: @making.id, readonly: true %>
+  <%= f.hidden_field :id, readonly: true %>
+
+  <!--トーラス面設定-->
+  <div class="form-group">
+    <%= f.label :is_torus, " トーラス面設定", class: "fas fa-globe-asia col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.radio_button :is_torus, true %>
+      <%= f.label :is_torus, '有効' %>
+      <%= f.radio_button :is_torus, false %>
+      <%= f.label :is_torus, '無効' %>
+    </div>
+  </div>
+
   <!--作成中パターンの編集エリア-->
-  <%= f.text_area :making_text, value: @making_bit_strings_array.join( "\n" ), class: "makings__edit--textarea", rows: @making_bit_strings_array.size, type: 'number' %>
+  <%= f.text_area :making_text,
+  value: build_up_bit_strings_from( @making ).join( "\n" ),
+  class: "makings__edit--textarea",
+  rows: ( 1 + @making.margin_top + @making.margin_bottom + @making.normalized_rows_sequence&.count( ?, ) || 0 ),
+  type: 'number' %>
   <% end %>
 </div>
 
@@ -44,6 +61,16 @@
         // 提出前のバリデーション実行 => falseなら送信中止
         return verificationMakingPattern();
       }
+    });
+
+    // トーラス面フラグ変更適用メソッド
+    $("#making_is_torus_true").change( function() {
+      // 有効にチェックが入った場合は有効にする
+      patternData.changeTorusFlag( true );
+    });
+    $("#making_is_torus_false").change( function() {
+      // 無効にチェックが入った場合は無効にする
+      patternData.changeTorusFlag( false );
     });
   });
 </script>
