LifeGame class introduce generationChangeCount. Fix layout detail about using content_tag.

--- a/app/assets/stylesheets/common/patterns.scss
+++ b/app/assets/stylesheets/common/patterns.scss
@@ -95,6 +95,7 @@
       padding: 10px;
     }
     &--submitUser {
+      padding-right: 20px;
       color: #999;
       font-weight: bold;
       a {
