--- a/app/views/layouts/_headerMenue.html.erb
+++ b/app/views/layouts/_headerMenue.html.erb
@@ -19,21 +19,22 @@
       <ul id="menue-child">
         <li>
           <!--タイトル-->
-          <span class="glyphicon glyphicon-list" aria-hidden="true" style="color: rgba(0,0,0,0);"></span>　メニュー
+          <%= content_tag :span, '', class: "glyphicon glyphicon-list", aria: { hidden: true }, style: "color: rgba(0,0,0,0);" %>
+          　メニュー
         </li>
         <li>
           <!--パターン新規作成ページへのリンク-->
-          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+          <%= content_tag :span, '', class: "glyphicon glyphicon-plus", aria: { hidden: true } %>
           <%= link_to "　パターン作成", edit_making_path %>
         </li>
         <li>
           <!--ログインユーザ中のページへのリンク-->
-          <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+          <%= content_tag :span, '', class: "glyphicon glyphicon-user", aria: { hidden: true } %>
           <%= link_to "　マイページ", member_path( current_user ) %>
         </li>
         <li>
           <!--ログアウト用リンク-->
-          <span class="glyphicon glyphicon-share" aria-hidden="true"></span>
+          <%= content_tag :span, '', class: "glyphicon glyphicon-share", aria: { hidden: true } %>
           <%= link_to "　ログアウト", destroy_user_session_path, method: :delete %>
         </li>
       </ul>
@@ -46,7 +47,8 @@
     <li style="text-align: left;">
       <%= link_to new_user_session_path do %>
       ようこそ！<br>
-      ログイン<span class="glyphicon glyphicon-log-in" aria-hidden="true" style="font-size: 10px;"></span>
+      ログイン
+      <%= content_tag :span, '', class: "glyphicon glyphicon-log-in", aria: { hidden: true }, style: "font-size: 10px;" %>
       <% end %>
     </li>
     <% end %>
