--- a/app/views/makings/edit.html.erb
+++ b/app/views/makings/edit.html.erb
@@ -2,7 +2,7 @@
 
 <!--ページ上部-->
 <div class="makings__edit--top">
-  <%= form_with( model: @making, url: making_path, method: :patch ) do | f | %>
+  <%= form_with( model: @making, url: making_path, method: "patch" ) do | f | %>
   <!--ページ上部のタイトル-->
   <h3>
     パターン編集エリア
@@ -10,9 +10,6 @@
     <!--「変更を保存」ボタンはdisplay: none;がデフォルト設定-->
     <%= f.submit '変更を保存', id: "makings__edit--update", class: "btn btn-success" %>
   </h3>
-
-  <!--作成中パターンのID-->
-  <%= f.hidden_field :id, readonly: true %>
 
   <!--トーラス面設定-->
   <div class="form-group">
@@ -29,7 +26,7 @@
   <%= f.text_area :making_text,
   value: build_up_bit_strings_from( @making ).join( "\n" ),
   class: "makings__edit--textarea",
-  rows: ( 1 + @making.margin_top + @making.margin_bottom + @making.normalized_rows_sequence&.count( ?, ) || 0 ),
+  rows: ( 1 + @making.margin_top + @making.margin_bottom + ( @making.normalized_rows_sequence&.count( ?, ) || 0 ) ),
   type: 'number' %>
   <% end %>
 </div>
@@ -43,7 +40,7 @@
 
 <!--パターン新規作成画面への移動アクション-->
 <button type="button" name="movePatternsNew" id="patterns__new" class="btn btn-default" onclick="jumpPatternsNew('<%= new_pattern_path %>');">
-  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+  <%= content_tag :span, '', class: "glyphicon glyphicon-pencil", aria: { hidden: true } %>
   このパターンを投稿する（パターン情報入力ページへ）
 </button>
 </div>
