--- a/app/views/patterns/_property.html.erb
+++ b/app/views/patterns/_property.html.erb
@@ -6,15 +6,15 @@
       作成日: <%= date_format( pattern.created_at ) %>
     </li>
     <li>
-      <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+      <%= content_tag :span, '', class: "glyphicon glyphicon-eye-open", aria: { hidden: true } %>
       閲覧数: <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>工事中<span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
     </li>
     <li>
-      <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
+      <%= content_tag :span, '', class: "glyphicon glyphicon-comment", aria: { hidden: true } %>
       コメント: <%= pattern.post_comments.size %>
     </li>
     <li>
-      <span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span>
+      <%= content_tag :span, '', class: "glyphicon glyphicon-paperclip", aria: { hidden: true } %>
       <!--お気に入り項目-->
       <% if /show/.match?( action_name ) && !! current_user then %>
       <!--ログイン中のユーザの場合-->
