--- a/app/views/patterns/edit.html.erb
+++ b/app/views/patterns/edit.html.erb
@@ -40,7 +40,7 @@
 
   <!--パターンのイメージ-->
   <div class="form-group">
-    <i class="fas fa-image"></i>
+    <%= content_tag :i, '', class: "fas fa-image" %>
     <%= f.label :image_id, " イメージ画像", class: "col-sm-2 control-label fas fa-image" %>
     <div class="col-sm-10">
       <%= f.attachment_field :image %>
@@ -95,7 +95,7 @@
 
 <p class="patterns__edit--alignRight">
   <%= link_to pattern_path( @pattern ), method: :delete, "data-confirm" => "本当に削除してもよろしいですか？", class: "btn btn-danger" do %>
-  <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+  <%= content_tag :span, '', class: "glyphicon glyphicon-trash", aria: { hidden: true } %>
   このパターンを削除する
   <% end %>
 </p>
