--- a/app/views/makings/_edit_helper.html.erb
+++ b/app/views/makings/_edit_helper.html.erb
@@ -33,7 +33,9 @@
 		</li>
 		<!--(3)作成中のパターンを初期化-->
 		<li role="presentation" class="makings__edit--destroy" id="unko">
-			<%= link_to "パターンを初期化", making_path, method: :delete, role: "menuitem", tabindex:"-1", "data-confirm" => "作成中のパターンを初期化しますか？" %>
+			<%= link_to making_path, method: :delete, role: "menuitem", tabindex:"-1", "data-confirm" => "作成中のパターンを初期化しますか？", role: "menuitem", tabindex: -1 do %>
+			<%= content_tag :i, 'パターンを初期化', class:"fas fa-bomb"%>
+			<% end %>
 		</li>
 	</ul>
 </div>
