--- a/app/views/categories/_index.html.erb
+++ b/app/views/categories/_index.html.erb
@@ -9,7 +9,7 @@
   <ul>
     <li class="categories__index--li">
       <%= content_tag :span, '', class: "glyphicon glyphicon-tag",aria: { hidden: true } %>
-      <%= link_to category.second, patterns_path( category_id: category.first ) %>
+      <%= link_to category.second, patterns_path( "search[category]" => category.first ) %>
     </li>
   </ul>
   <% end %>
