Building DisplayFormat#new and#edit now.

--- a/app/assets/stylesheets/common/display_formats.scss
+++ b/app/assets/stylesheets/common/display_formats.scss
@@ -1,3 +1,10 @@
-// Place all the styles related to the DisplayFormats controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.display_formats {
+  &__form {
+    &--cellsConditions {
+      text-align: center;
+    }
+    &--submit {
+      text-align: right;
+    }
+  }
+}
