--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,3 +1,6 @@
 <h1>Homes#top</h1>
 <p>Find me in app/views/homes/top.html.erb</p>
-<p>test</p>
+<p>
+  <%= link_to 'DisplayFormat#new', new_display_format_path %><br>
+  <%= link_to 'DisplayFormat#edit_1', edit_display_format_path( 1 ) %>
+</p>
