--- a/app/views/display_formats/new.html.erb
+++ b/app/views/display_formats/new.html.erb
@@ -1,2 +1,2 @@
-<h1>DisplayFormats#new</h1>
-<p>Find me in app/views/display_formats/new.html.erb</p>
+
+<%= render 'display_formats/form', display_format: @display_format %>
