--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -5,7 +5,7 @@
   <%= content_tag :i, '', class:"fas fa-question"%>
 </h3>
 <p class="homes__about--body">
-  ライフゲームとは、生命の誕生や死について簡易的なルールを設定した場合に、その繁栄と衰退の様子をシミュレーションしてみるゲームです。<br>
+  　ライフゲームとは、生命の誕生や死について簡易的なルールを設定した場合に、その繁栄と衰退の様子をシミュレーションしてみるゲームです。<br>
   ライフゲームは1970年にイギリスの数学者ジョン・ホートン・コンウェイ (John Horton Conway) によって考案されました。<br><br>
   本コンテンツは「ゲーム」と言いつつ、基本的には眺めることが趣旨になります が、生命の配置次第で不可思議な変化を楽しむことができます。<br>
 ［参考：<a href="https://ja.wikipedia.org/wiki/%E3%83%A9%E3%82%A4%E3%83%95%E3%82%B2%E3%83%BC%E3%83%A0">ライフゲーム（Wikipedia）</a>］
@@ -16,10 +16,11 @@
   ライフゲームのルール
 </h3>
 <p class="homes__about--body">
-  ライフゲームは将棋や囲碁のように、マスで構成された盤面が舞台となります。 <br>
-  各マスには生命（以下「セル」と呼称）が「生」or「死」のどちらかになっています。<br>
-  <span class="homes__about--span">（電光掲示板でいう「光ってる電球」と「消えてる電球」みたいなもの？）</span><br>
-  マス上のセルは１単位時間ごとに以下のルールに従って、「生」と「死」の状態が変化します。<br>
+  1) ライフゲームは将棋や囲碁のように、マスで構成された盤面が舞台となります。 <br>
+  2) 各マスには生命（以下「セル」と呼称）が「生」or「死」のどちらかになっています。<br>
+  　<span class="homes__about--span">（電光掲示板でいう「光ってる電球」と「消えてる電球」みたいなもの？）</span><br>
+  3) マス上のセルは１単位時間ごとに以下のルールに従って、「生」と「死」の状態が変化します。<br>
+  4) 上記の変化は盤面上の全セルに対して同時に実行されます。<br>
   あとはこの単位時間が進むに従ってマス上のセルの「生」と「死」の分布の変化を楽しむことが目的となります。
 </p>
 
