--- a/app/views/patterns/_form_preview_script.html.erb
+++ b/app/views/patterns/_form_preview_script.html.erb
@@ -1,4 +1,5 @@
 <!--リアルタイムでライフゲームの書式を変更できるようにするためのJS部分テンプレート-->
+<!--Patterns#new, #editで使用-->
 
 <script type="text/javascript">
   $( function() {
