--- a/app/views/members/update.js.erb
+++ b/app/views/members/update.js.erb
@@ -3,12 +3,12 @@
 // 表示中のバリデーションエラー用のclassを除去
 $("input").removeClass("application__errors--textField")
 // バリデーションエラーメッセージの表示
-callMessageWindow( "warning", "<%= @user.errors.full_messages.join( ?, ) %>".split(',') );
+callMessageWindow( "danger", "<%= @user.errors.full_messages.join( ?, ) %>".split(',') );
 // エラー項目にエラー用のclassを追加する
-<% @pattern.errors.each do | column, message | %>
+<% @user.errors.each do | column, message | %>
 $(".members__edit--<%= column %>").addClass("application__errors--textField");
 <% end %>
 <% else %>
 // テキストフィールドを除去し、元の表示に戻す
-$(".members__show--divRight").html( "<%= escape_javascript( render 'members/detail', user: @user ) %>" );
+$(".members__show--profile").html( "<%= escape_javascript( render 'members/detail', user: @user ) %>" );
 <% end %>
