--- a/app/views/patterns/new.html.erb
+++ b/app/views/patterns/new.html.erb
@@ -1,80 +1,10 @@
 <!--作成したパターンの新規投稿ページ-->
 
+<!--ページタイトル-->
+<h3>投稿前パターン情報入力</h3>
 <div class="patterns__new">
-  <!--ページタイトル-->
-  <h3>投稿前パターン情報入力</h3>
-
-  <%= form_with model: @pattern, class: "form-horizontal" do | f | %>
-
-  <!--パターン名（入力必須）-->
-  <div class="form-group">
-    <%= f.label :name, ' パターンの名前', class: "fas fa-pencil-alt col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.text_field :name, class: "form-control" %>
-    </div>
-  </div>
-
-  <!--カテゴリ選択（デフォルト：未分類）-->
-  <div class="form-group">
-    <%= f.label :category_id, ' カテゴリ', class: "fas fa-folder-open col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.select :category_id, Category.pluck( :name, :id ).to_h %>
-    </div>
-  </div>
-
-  <!--表示形式選択（デフォルト：Default 1）-->
-  <div class="form-group">
-    <%= f.label :display_format_id, ' セルの表示形式', class: "fas fa-th-large col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.select :display_format_id, DisplayFormat.pluck( :name, :id ).to_h %>
-    </div>
-  </div>
-
-  <!--このパターン紹介文（入力必須）-->
-  <div class="form-group">
-    <%= f.label :introduction, ' このパターン紹介文', class: "fas fa-pencil-alt col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.text_area :introduction, rows: 3, class: "form-control" %>
-    </div>
-  </div>
-
-  <!--パターンのイメージ-->
-  <div class="form-group">
-    <%= f.label :image_id, " イメージ画像", class: "fas fa-image col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.attachment_field :image %>
-    </div>
-  </div>
-
-  <!--トーラス面設定-->
-  <div class="form-group">
-    <%= f.label :is_torus, " トーラス面設定", class: "fas fa-globe-asia col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.radio_button :is_torus, true %>
-      <%= f.label :is_torus, '有効' %>
-      <%= f.radio_button :is_torus, false %>
-      <%= f.label :is_torus, '無効' %>
-    </div>
-  </div>
-
-  <!--四方向のマージン（自動入力）-->
-  <%= f.hidden_field :margin_top, readonly: true %>
-  <%= f.hidden_field :margin_bottom, readonly: true %>
-  <%= f.hidden_field :margin_left, readonly: true %>
-  <%= f.hidden_field :margin_right, readonly: true %>
-
-  <!--正規化行数列（自動入力）-->
-  <%= f.hidden_field :normalized_rows_sequence, readonly: true %>
-
-  <!--投稿ボタン-->
-  <p class="patterns__new--submit">
-    <%= f.submit "これで投稿する", class: "btn btn-primary patterns__new--submit" %>
-  </p>
-  <% end %>
+  <%= render 'patterns/form', pattern: @pattern %>
 </div>
 
 <!--登校前パターンのプレビュー（エミュレート）画面-->
 <%= render 'patterns/emulation' %>
-
-<!--リアルタイムでライフゲームの書式を変更できるようにするためのJS-->
-<%= render 'patterns/form_preview_script' %>
